--- a/A_dbms/templates/dbms/article/modl/article-agree-add-mod.html
+++ b/A_dbms/templates/dbms/article/modl/article-agree-add-mod.html
@@ -14,6 +14,7 @@
                 <form class="form-horizontal">
                     {% include 'dbms/article/modl/mod_form/article-agree-add.html' %}
                     {% include 'dbms/article/modl/mod_form/article-agree-letter-add.html' %}
+                    {% include 'dbms/article/modl/mod_form/article-agree-jk-add.html' %}
                 </form>
             </div>
             <label id="formErrors"></label>
