--- a/A_dbms/templates/dbms/agree/agree_board/loan-single-p.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan-single-p.html
@@ -16,8 +16,8 @@
             <p>住所：<u><strong>{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</strong></u> </p>
         {% endif %}
     </div>
-    {% if borrower_list %}
-        {% for borrower in borrower_list %}
+    {% if agree_obj.lending.summary.borrower.all %}
+        {% for borrower in agree_obj.lending.summary.borrower.all %}
             <div style="padding-bottom: 15pt">
                 <p>借 款 人：<u><strong>{{ borrower.name }}</strong></u> </p>
                 {% if borrower.genre == 2 %}
@@ -65,12 +65,11 @@
     <p>若上述手续未完全齐备，或所有必须的文件尚未达到贷款人或相关法律机构的要求，则贷款人有权不予发放本合同项下贷款，相应后果由借款人全部承担。</p>
     <p><strong>第五条  贷款偿还</strong></p>
     <p>5.1本合同项下，借款人以壹月为一期，按期还款，首期自2.2款规定之放款日起计算。计算一期的正常利息采用月利率，本合同项下利率转换方式为：月利率=年利率/12；日利率=年利率/360。</p>
-    <p>本合同采取以下第<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>项方式还款：</p>
+    <p>本合同采取以下第<u><strong>（{% if agree_obj.repay_method == 11 %}1{% elif agree_obj.repay_method == 21 %}2{% elif agree_obj.repay_method == 31 %}3{% endif %}）</strong></u>项方式还款：</p>
     <p>（1）按月付息、到期一次还本法：借款人每月付息，贷款到期日一次性偿还贷款本金。当月利息=贷款本金×日利率×占用天数。</p>
     <p>（2）等额本息法：即贷款期限内每期以相等的额度偿还贷款本息，每期还款额计算公式为：</p>
-
-    <p>每期还款额为人民币（大写金额）：<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。</p>
-    <p>（3）按月付息、分期还本法：<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。</p>
+    <p>每期还款额为人民币（大写金额）：<u><strong>{% if agree_obj.repay_method == 21 %}{{ agree_obj.repay_ex }}{% else %}/{% endif %}</strong></u>。</p>
+    <p>（3）按月付息、分期还本法：<u><strong>{% if agree_obj.repay_method == 31 %}{{ agree_obj.repay_ex }}{% else %}/{% endif %}</strong></u>。</p>
     <p>选择按月付息、到期一次还本法和按月付息、分期还本法的，本合同项下的贷款按每月的二十日为结息日，结息日为付息日，如遇法定节假日，则顺延至下一工作日。</p>
     <p>选择等额本息法的，则按月归还贷款本息，当期利息当期清偿，贷款最后到期时利随本清，以贷款人放出贷款日的下一个月度同一日为首期还款日，之后于每月度同日还款。</p>
     <p>如还款日不是贷款人营业日，则借款人应于该还款日后第一个贷款人营业日还款。</p>
@@ -92,9 +91,9 @@
     <p>（3）贷款本金。</p>
     <p>6.3扣划所得款项与需抵偿的债务币种不一致的，按5.2款规定之受托银行在扣划日公布的汇率折算为抵偿债务的金额。</p>
     <p><strong>第七条  挪用贷款、逾期、部分还款与提前还款</strong></p>
-    <p>7.1借款人挪用贷款即不按本合同约定用途使用贷款的，<strong>借款人除对挪用贷款按本合同约定贷款利率按日计算向贷款人支付利息外，</strong>自挪用之日起至挪用终结之日止，还应按挪用贷款本金的万分之<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>/天的标准向贷款人加付违约金。</p>
-    <p>7.2借款人不按本合同约定期限归还贷款本金即贷款本金归还逾期的，<strong>借款人除对逾期贷款本金按本合同约定贷款利率按日计算向贷款人支付利息外，</strong>自逾期之日起至贷款本金清偿之日前一日止，还应按逾期贷款本金的万分之<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>/天的标准向贷款人加付违约金。</p>
-    <p>7.3借款人不按本合同约定的结（付）息日支付利息即贷款利息支付逾期的，<strong>借款人除应向贷款人支付应付利息外，</strong>自利息逾期之日起至利息清偿之日前一日止，借款人还应向贷款人加付违约金，贷款期限内按逾期利息的万分之<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>/天的标准计算，贷款期限届满次日起按逾期利息的万分之<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>/天的标准计算；利息逾期跨越贷款期限内、外两个时段的，本款违约金应分时段计算、合并收取。</p>
+    <p>7.1借款人挪用贷款即不按本合同约定用途使用贷款的，<strong>借款人除对挪用贷款按本合同约定贷款利率按日计算向贷款人支付利息外，</strong>自挪用之日起至挪用终结之日止，还应按挪用贷款本金的万分之<u><strong>{{ agree_rate_w }}</strong></u>/天的标准向贷款人加付违约金。</p>
+    <p>7.2借款人不按本合同约定期限归还贷款本金即贷款本金归还逾期的，<strong>借款人除对逾期贷款本金按本合同约定贷款利率按日计算向贷款人支付利息外，</strong>自逾期之日起至贷款本金清偿之日前一日止，还应按逾期贷款本金的万分之<u><strong>{{ agree_rate_w }}</strong></u>/天的标准向贷款人加付违约金。</p>
+    <p>7.3借款人不按本合同约定的结（付）息日支付利息即贷款利息支付逾期的，<strong>借款人除应向贷款人支付应付利息外，</strong>自利息逾期之日起至利息清偿之日前一日止，借款人还应向贷款人加付违约金，贷款期限内按逾期利息的万分之<u><strong>{{ agree_rate_w }}</strong></u>/天的标准计算，贷款期限届满次日起按逾期利息的万分之<u><strong>{{ agree_rate_w }}</strong></u>/天的标准计算；利息逾期跨越贷款期限内、外两个时段的，本款违约金应分时段计算、合并收取。</p>
     <p>7.4若借款人不能按本合同约定的贷款期限偿还贷款，可以由借款人在贷款到期十日前提出书面贷款展期申请，但必须经贷款人审查同意，贷款人与借款人签订贷款展期协议，有条件地延长借款期限。如贷款人不同意展期，则借款人应当及时归还贷款否则视为违约。</p>
     <p>7.5若借款人偿还的款项少于按本合同约定于该日到期的债务总额，则该款项按6.2款顺序清偿债务。贷款人有权调整上述清偿顺序。</p>
     <p>7.6借款人可以在第一期之后的任一期还款日（最后一期的还款日除外）七日前对贷款人做出提前还款意向的书面申请。借款人提前还款经贷款人书面同意的，借款人可以提前偿还部分或全部贷款。借款人若提前全部还款的，必须先结清提前还款日的当期应缴本金和利息，再核算并归还全部未清偿的本金。提前还款申请应列明提前还款的日期和金额，提前还款书面申请一经贷款人同意即为不可撤销。</p>
