--- a/A_dbms/templates/dbms/agree/extra/js-agree-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-add.html
@@ -2,14 +2,29 @@
     $(function () {
         bindAddAgree();
         bind_id_agree_typ();
+        bind_id_agree_typ_load();
         bindAddAgreeModalOk();
     });
 
     function bindAddAgree() {
         $('#addAgree').click(function () {
-            console.log("bindAddAgree");
             $('#addAgreeModal').modal('show');
         })
+    }
+
+    function bind_id_agree_typ_load() {
+        var selected_id_agree_typ = $('#id_agree_typ').val();
+        $('.agree-extend').hide();
+        switch (selected_id_agree_typ) {
+            case ('22'):
+                $('#form_agree_letter_add').show();
+                break;
+            case ('51'):
+                $('#form_agree_jk_add').show();
+                break;
+            default:
+                $('.agree-extend').hide()
+        }
     }
 
     function bind_id_agree_typ() {
@@ -42,7 +57,9 @@
                 postData[n] = v;
             });
             var other_g = $('#id_other').val();
+            var repay_ex_g = $('#id_repay_ex').val();
             postData['other'] = other_g;
+            postData['repay_ex'] = repay_ex_g;
 
             var postDataStr = JSON.stringify(postData);
             $.ajax({
