--- a/A_dbms/templates/dbms/agree/modl/agree-edit-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/agree-edit-mod.html
@@ -8,11 +8,13 @@
                 </button>
                 <h4 class="modal-title" id="editAgreeModalLabel">修改委托保证合同：{{ agree_obj.agree_num }}</h4>
                 <input style="display: none" name="agree_id" value="{{ agree_obj.id }}">
-
+                <input style="display: none" name="agree_typ_n" id="id_agree_typ_n" value={{ agree_obj.agree_typ }}>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
                     {% include 'dbms/agree/modl/mod_form/agree-edit.html' %}
+                    {% include 'dbms/article/modl/mod_form/article-agree-letter-add.html' %}
+                    {% include 'dbms/article/modl/mod_form/article-agree-jk-add.html' %}
                 </form>
             </div>
             <label id="formErrors"></label>
