--- a/A_dbms/templates/dbms/agree/preview-counter.html
+++ b/A_dbms/templates/dbms/agree/preview-counter.html
@@ -4,8 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ counter_obj.counter_num }}</title>
-    <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-style.css' %}">
-    <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-style.css' %}">
+    {% if agree_obj.agree_typ in AGREE_TYP_D %}
+        <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-style.css' %}">
+        <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-style.css' %}">
+    {% elif agree_obj.agree_typ in AGREE_TYP_X %}
+        <link rel="stylesheet" media="screen" href="{% static 'dbms/css/agree-style-x.css' %}">
+        <link rel="stylesheet" media="print" href="{% static 'dbms/css/agree-style-x.css' %}">
+    {% endif %}
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 </head>
 <body>
@@ -85,7 +90,15 @@
         {% elif agree_typ == 42 %}
             <p>！！！！！！！(42, 'D-最高额(公证)'),！！！！！！！</p>
         {% elif agree_typ == 51 %}
-            <p>！！！！！！！(51, 'X-小贷单笔'),！！！！！！！</p>
+            {% if counter_typ == 1 and counter_typ == 2 %}
+                {% include 'dbms/agree/agree_board/loan_co/l-c-s-x.html' %}
+            {% elif counter_typ in D_COUNTER_TYP_LIST %}
+                {% include 'dbms/agree/agree_board/loan_co/l-c-s-d.html' %}
+            {% elif counter_typ in Z_COUNTER_TYP_LIST %}
+                {% include 'dbms/agree/agree_board/loan_co/l-c-s-z.html' %}
+            {% else %}
+                <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
+            {% endif %}
         {% elif agree_typ == 52 %}
             <p>！！！！！！！(52, 'X-小贷最高额'),！！！！！！！</p>
         {% else %}
