--- a/A_dbms/templates/dbms/article/article-scan.html
+++ b/A_dbms/templates/dbms/article/article-scan.html
@@ -11,6 +11,8 @@
         {% include 'dbms/article/modl/feedback-add-mod.html' %}
         {% include 'dbms/article/modl/article-sub-mod.html' %}
 
+        {% include 'dbms/article/modl/opinion-add-mod.html' %}
+
         {% include 'dbms/appraisal/modl/comment-add-mod.html' %}
         {% include 'dbms/appraisal/modl/supply-add-mod.html' %}
         {% include 'dbms/appraisal/modl/supply-edit-mod.html' %}
@@ -37,6 +39,8 @@
     {% include 'dbms/article/extra/js-article-del.html' %}
     {% include 'dbms/article/extra/js-feedback-add.html' %}
     {% include 'dbms/article/extra/js-article-sub.html' %}
+
+    {% include 'dbms/article/extra/js-opinion-add.html' %}
 
     {% include 'dbms/appraisal/extra/js-comment-add.html' %}
     {% include 'dbms/appraisal/extra/js-supply-add.html' %}
