--- a/A_dbms/templates/dbms/article/scan/article-summry.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry.html
@@ -3,7 +3,10 @@
         <label>项目情况</label>
         <label class="navbar-right">
             {% if PAGE_TITLE == '项目详情' %}
-                <a class="btn btn-danger btn-sm " id="subArticle">提交</a>
+{#                <a class="btn btn-danger btn-sm " id="subArticle">提交</a>#}
+                <a class="btn btn-primary btn-sm " id="subOpinion">项目意见</a>
+                <a class="btn btn-default btn-sm " id="subApprovalForm">审批表</a>
+
                 {% if 'article_feedback_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="feedbackArticle">反馈</a><!--#path('article/del/'-->
                 {% endif %}
@@ -26,7 +29,7 @@
                     <a class="btn btn-primary btn-sm " id="lendingOrder">放款次序</a><!--#path('appraisal/lending/add/'-->
                 {% endif %}
                 {% if article_obj.article_state in SHOW_SUM_LIST %}
-                    <a class="btn btn-primary btn-sm " id="summaryScan" target="_blank"
+                    <a class="btn btn-default btn-sm " id="summaryScan" target="_blank"
                        href="{% url 'dbms:appraisal_summary_scan' article_id=article_obj.id %}">意见书</a>
                 {% endif %}
                 {% if 'appraisal_article_sign_ajax' in authority_list %}
