纪要反担保措施增加担保措施类型说明

--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-lendingsures-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-lendingsures-add.html
@@ -5,6 +5,11 @@
         <div class="col-sm-9">{{ form_lendingsures.sure_typ }}</div>
         <label id="e_sure_typ" class="pull-right">{{ form_lendingsures.sure_typ.errors }}</label>
     </div>
+    <div class="form-group"><!--备注-->
+        <label for="id_sure_remark" class="col-sm-3 control-label">{{ form_lendingsures.sure_remark.label }}：</label>
+        <div class="col-sm-9">{{ form_lendingsures.sure_remark }}</div>
+        <label id="e_sure_remark" class="pull-right">{{ form_lendingsures.sure_remark.errors }}</label>
+    </div>
 
 </div>
 
