--- a/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-guarantee-add.html
@@ -1,20 +1,100 @@
 <script>
     $(function () {
         bindGuaranteeB();
+        bind_id_sure_typ_load();
         bind_id_sure_typ();
         bindGuaranteeAddModalOk();
     });
 
     function bindGuaranteeB() {
         $('#guaranteeB').click(function () {
-            console.log("bindGuaranteeB");
             $('#guaranteeAddModal').modal('show');
         })
     }
 
+    function bind_id_sure_typ_load() {
+        var load_id_sure_typ = $('#id_sure_typ').val();
+        $('.guarantee-extend').hide();
+        switch (load_id_sure_typ) {
+            case ('1'):{#<--企业保证-->#}
+                $('#form_lendingcustoms_c_add').show();
+                break;
+            case ('2'):{#<--个人保证-->#}
+                $('#form_lendingcustoms_p_add').show();
+                break;
+            case ('11'):{#<--房产抵押-->#}
+                $('#form_lendinghouse_add').show();
+                break;
+            case ('21'):{#<--房产顺位-->#}
+                $('#form_lendinghouse_add').show();
+                break;
+            case ('42'):{#<--房产监管-->#}
+                $('#form_lendinghouse_add').show();
+                break;
+            case ('52'):{#<--房产预售-->#}
+                $('#form_lendinghouse_add').show();
+                break;
+            case ('12'):{#<--土地抵押-->#}
+                $('#form_lendingground_add').show();
+                break;
+            case ('22'):{#<--土地顺位-->#}
+                $('#form_lendingground_add').show();
+                break;
+            case ('43'):{#<--土地监管-->#}
+                $('#form_lendingground_add').show();
+                break;
+            case ('53'):{#<--土地预售-->#}
+                $('#form_lendingground_add').show();
+                break;
+            case ('14'):{#<--在建工程抵押-->#}
+                $('#form_lendingconstruct_add').show();
+                break;
+            case ('23'):{#<--在建工程顺位-->#}
+                $('#form_lendingconstruct_add').show();
+                break;
+            case ('31'):{#<--应收质押-->#}
+                $('#form_lendinggreceivable_add').show();
+                break;
+            case ('32'):{#<--股权质押-->#}
+                $('#form_lendingstock_add').show();
+                break;
+            case ('15'):{#<--车辆抵押-->#}
+                $('#form_lendingvehicle_add').show();
+                break;
+            case ('13'): {#<--动产抵押-->#}
+                $('#form_lendingchattel_add').show();
+                break;
+            case ('24'): {#<--动产抵押-->#}
+                $('#form_lendingchattel_add').show();
+                break;
+            case ('34'): {#<--动产质押-->#}
+                $('#form_lendingchattel_add').show();
+                break;
+            case ('47'): {#<--动产监管-->#}
+                $('#form_lendingchattel_add').show();
+                break;
+            case ('33'): {#<--票据质押-->#}
+                $('#form_lendingdraft_add').show();
+                break;
+            case ('44'): {#<--票据质押-->#}
+                $('#form_lendingdraft_add').show();
+                break;
+            case ('39'): {#<--其他质押-->#}
+                $('#form_lendingother_add').show();
+                break;
+            case ('49'): {#<--其他监管-->#}
+                $('#form_lendingother_add').show();
+                break;
+            case ('59'): {#<--其他预售-->#}
+                $('#form_lendingother_add').show();
+                break;
+            default:
+                $('.guarantee-extend').hide()
+        }
+    }
+
     function bind_id_sure_typ() {
         $('#id_sure_typ').change(function () {
-            console.log("bind_id_sure_typ");
             $(".search-id").empty();
             var selected_sure_typ = $('#id_sure_typ').val();
             console.log(selected_sure_typ);
@@ -114,6 +194,8 @@
                 var n = $(this).attr('name');
                 postData[n] = v;
             });
+            var sure_remark_g = $('#id_sure_remark').val();
+            postData['sure_remark'] = sure_remark_g;
 
             var postDataStr = JSON.stringify(postData);
             console.log(postDataStr);
