--- a/A_dbms/templates/dbms/article/scan/article-summry.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry.html
@@ -5,8 +5,10 @@
             {% if PAGE_TITLE == '项目详情' %}
 {#                <a class="btn btn-danger btn-sm " id="subArticle">提交</a>#}
                 <a class="btn btn-primary btn-sm " id="subOpinion">项目意见</a>
-                <a class="btn btn-default btn-sm " id="subApprovalForm">审批表</a>
-
+                {% if 'article_endor_list_scan' in authority_list %}
+                    <a class="btn btn-primary btn-sm " id="endorList" target="_blank"
+                   href="{% url 'dbms:article_endor_list_scan' article_id=article_obj.id %}">审批表</a>
+                {% endif %}
                 {% if 'article_feedback_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="feedbackArticle">反馈</a><!--#path('article/del/'-->
                 {% endif %}
