--- a/A_dbms/templates/dbms/provide/agree/notify/provide-notify-summry.html
+++ b/A_dbms/templates/dbms/provide/agree/notify/provide-notify-summry.html
@@ -1,8 +1,18 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <label>合同情况</label>
-        <label class="navbar-right"><a class="btn btn-primary btn-sm " id="addProvideB">放款</a></label>
+        <label class="navbar-right">
+            {% if 'provide_add_ajax' in authority_list %}
+                <a class="btn btn-success btn-sm " id="provideNotifyB" target="_blank"
+                   href="{% url 'dbms:provide_notify_show' notify_id=notify_obj.id %}">放款通知</a>
+            {% endif %}
+            {% if 'provide_add_ajax' in authority_list %}
+                <a class="btn btn-primary btn-sm " id="addProvideB">放款</a>
+            {% endif %}
+        </label>
     </div>
 
-    <div class="panel-body row" style="padding: 1px;">{% include 'dbms/agree/scan/agree-summry-body.html' %}</div>
+    <div class="panel-body row" style="padding: 1px;">
+        {% include 'dbms/agree/scan/agree-summry-body.html' %}
+    </div>
 </div>
